# mediaspin

./: README.md  annotation_creating_prompts.ipynb  cleaning.ipynb
R/: DESCRIPTION  NAMESPACE  README.md
R/R/: annotate.R  parse.R  prompt.R
analysis/: checking_coding.R  subjective_objective_coding.R
annotation/: annotation_processing_pipeline.ipynb  data_annotation.ipynb
geographic/: check_countries.py  check_places.py  heatmap.R  place_dist.R  place_to_country.py  process_places.py  process_words.py
mediaspin-in-the-wild/: engagement_figure.R  match_public.py  match_to_metric.R  mediaspinv2.R
python/: README.md  pyproject.toml
python/mediaspin/: __init__.py  annotate.py  prompt.py
